# plateSolver

./: .gitattributes  CMakeLists.txt  IPlateSolver.h  PlateSolver.cpp  PlateSolver.h  README.md  main.cpp
built/mac/: PlateSolver
